--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,7 @@ body {
     width: 100%;
     height: 100vh;
     //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
-    background: #fdfdfd;
+    background: rgba(17,24,39,1);
     position: fixed;
     left: 0;
     top: 0;
